# cueloop

./: .env.example  .gitignore  .repo_ignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  PORTFOLIO.md  README.md  SECURITY.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  cliff.toml
.cargo/: config.toml
.cueloop/: README.md  config.jsonc  done.jsonc  queue.jsonc
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-template.md
.ralph/: README.md  config.json  config.jsonc  done.json  done.jsonc  done.yaml  phase3_report.md  queue.json  queue.jsonc  queue.yaml  ralph.json
apps/: AGENTS.md
docs/: architecture.md  cli.md  competitive-analysis.md  configuration.md  decisions.md  environment.md  error-handling.md  index.md  kimi-continue-resume-session-trace.md  machine-contract.md  parallel-plan.md  plugin-development.md  queue-and-tasks.md  quick-start.md  releasing.md  roadmap.md  runner-integration-contract-2026-02-25.md  runner_cli_inventory.md  security-model.md  support-policy.md  troubleshooting.md  tui-task-management.md  versioning-policy.md  workflow.md
mk/: ci.mk  coverage.mk  macos.mk  repo-safety.mk  rust.mk
prompt-exports/: optimize-macos-ci-runs.md  oracle-plan-2026-04-24-145917-optimize-macos-ci-f3-9520.md
ralph_legacy/: AGENTS.md  README.md  prompt.md  prompt_opencode.md
ralph_tui/: AGENTS.md  go.mod
schemas/: config.schema.json  machine.schema.json  queue.schema.json
scripts/: agent-ci-surface.sh  build-release-artifacts.sh  check-cueloop-cutover.sh  (+16 more)
(+2660 files in other folders)
